[package]
name = "merge"
version = "0.1.0"
authors = ["Luc Street (@0xSiO)"]
description = "Merge audio files into a single MP3 file, with chapters and optional metadata."
edition = "2021"
license = "MIT"
publish = false

[dependencies]
anyhow = "1.0.0"
chrono = "0.4.0"
clap = { version = "3.2.0", features = ["derive"] }
duct = "0.13.0"
id3 = "1.3.0"
indicatif = "0.17.0"
mime_guess = "2.0.0"
tempfile = "3.3.0"
